# mngr-fargate

./: README.md  pyproject.toml  start.py  test_e2e.py
docker/: Dockerfile  entrypoint.sh
imbue/mngr_fargate/: __init__.py  backend.py  ecs_client.py  instance.py
infra/: app.py  stack.py
src/imbue/mngr_fargate/: config.py  instance.py
