[project]
name = "imbue-mngr-fargate"
version = "0.1.0"
description = "AWS Fargate provider backend plugin for mngr"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "imbue-mngr>=0.2.0",
    "boto3>=1.34.0",
]

[project.entry-points.mngr]
fargate = "imbue.mngr_fargate.backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.pyright]
pythonVersion = "3.12"
strict = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["."]
